[gd_scene load_steps=3 format=3 uid="uid://s3my6de6ot51"]

[ext_resource type="Script" path="res://ui/main_ui_backup.gd" id="1_e67oy"]
[ext_resource type="Script" path="res://ui/custom/popup_bar.gd" id="2_ktnnl"]

[node name="MainUI" type="CanvasLayer"]
script = ExtResource("1_e67oy")

[node name="PopupBar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("2_ktnnl")

[node name="Items" type="PopupMenu" parent="PopupBar"]
disable_3d = true
size = Vector2i(100, 89)
extend_to_title = true
item_count = 3
item_0/text = "Food"
item_0/id = 0
item_1/text = "Drink"
item_1/id = 1
item_2/text = "Medicine"
item_2/id = 2

[node name="Info" type="PopupPanel" parent="PopupBar"]
disable_3d = true
gui_disable_input = true
size = Vector2i(500, 195)
extend_to_title = true
mouse_passthrough = true
content_scale_size = Vector2i(1000, 495)

[node name="VBoxContainer" type="VBoxContainer" parent="PopupBar/Info"]
offset_left = 4.0
offset_top = 4.0
offset_right = 496.0
offset_bottom = 191.0
size_flags_horizontal = 3

[node name="Wealth" type="HBoxContainer" parent="PopupBar/Info/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PopupBar/Info/VBoxContainer/Wealth"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Wealth:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Value" type="Label" parent="PopupBar/Info/VBoxContainer/Wealth"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "100 RMB"

[node name="Health" type="HBoxContainer" parent="PopupBar/Info/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PopupBar/Info/VBoxContainer/Health"]
layout_mode = 2
size_flags_horizontal = 3
text = "Health:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="PopupBar/Info/VBoxContainer/Health"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
step = 1.0
value = 100.0

[node name="Mood" type="HBoxContainer" parent="PopupBar/Info/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PopupBar/Info/VBoxContainer/Mood"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Mood:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="PopupBar/Info/VBoxContainer/Mood"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
step = 1.0
value = 100.0

[node name="Satiety" type="HBoxContainer" parent="PopupBar/Info/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PopupBar/Info/VBoxContainer/Satiety"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Satiety:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="PopupBar/Info/VBoxContainer/Satiety"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
step = 1.0
value = 100.0

[node name="Thirst" type="HBoxContainer" parent="PopupBar/Info/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PopupBar/Info/VBoxContainer/Thirst"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Thirst:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="PopupBar/Info/VBoxContainer/Thirst"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
step = 1.0
value = 100.0

[node name="Active" type="PopupPanel" parent="PopupBar"]
disable_3d = true
size = Vector2i(500, 195)
extend_to_title = true
mouse_passthrough = true
content_scale_size = Vector2i(1000, 495)

[node name="Custom" type="PopupPanel" parent="PopupBar"]
disable_3d = true
size = Vector2i(500, 195)
extend_to_title = true
mouse_passthrough = true
content_scale_size = Vector2i(1000, 495)

[node name="System" type="PopupMenu" parent="PopupBar"]
disable_3d = true
size = Vector2i(116, 62)
extend_to_title = true
item_count = 2
item_0/text = "ScreenShot"
item_0/id = 0
item_1/text = "Recording"
item_1/id = 1

[node name="_HBoxContainer_37439" type="HBoxContainer" parent="PopupBar"]
layout_mode = 0
offset_top = 676.8
offset_right = 1348.0
offset_bottom = 846.0
tooltip_text = "double click to hide or show"
alignment = 1

[node name="_Button_37440" type="Button" parent="PopupBar/_HBoxContainer_37439"]
layout_mode = 2
size_flags_horizontal = 3
text = "Items"
text_overrun_behavior = 3
clip_text = true

[node name="_Button_37441" type="Button" parent="PopupBar/_HBoxContainer_37439"]
layout_mode = 2
size_flags_horizontal = 3
text = "Info"
text_overrun_behavior = 3
clip_text = true

[node name="_Button_37442" type="Button" parent="PopupBar/_HBoxContainer_37439"]
layout_mode = 2
size_flags_horizontal = 3
text = "Active"
text_overrun_behavior = 3
clip_text = true

[node name="_Button_37443" type="Button" parent="PopupBar/_HBoxContainer_37439"]
layout_mode = 2
size_flags_horizontal = 3
text = "Custom"
text_overrun_behavior = 3
clip_text = true

[node name="_Button_37444" type="Button" parent="PopupBar/_HBoxContainer_37439"]
layout_mode = 2
size_flags_horizontal = 3
text = "System"
text_overrun_behavior = 3
clip_text = true

[node name="RightClickMenu" type="PopupMenu" parent="."]
size = Vector2i(83, 62)
extend_to_title = true
item_count = 2
item_0/text = "Setting"
item_0/id = 0
item_1/text = "Exit"
item_1/id = 1

[connection signal="index_pressed" from="PopupBar/Items" to="." method="_on_item_index_pressed"]
